--- a/react/package.json
+++ b/react/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
     "axios": "^1.6.0",
+    "framer-motion": "^11.2.10",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
@@ -26,7 +27,8 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
